--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -1,7 +1,7 @@
 .bi {
-  display: inline-block;
-  width: 1rem;
-  height: 1rem;
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
 }
 
 /*
@@ -9,32 +9,32 @@
  */
 
 @media (min-width: 768px) {
-  .sidebar .offcanvas-lg {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 48px;
-  }
-  .navbar-search {
-    display: block;
-  }
-}
+    .sidebar {
+        height: 100vh;
+    }
 
-.sidebar {
-  height: 100vh;
+    .sidebar .offcanvas-lg {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 48px;
+    }
+    .navbar-search {
+        display: block;
+    }
 }
 
 .sidebar .nav-link {
-  font-size: .875rem;
-  font-weight: 500;
+    font-size: 0.875rem;
+    font-weight: 500;
 }
 
 .sidebar .nav-link.active {
-  color: #da0037;
-  font-weight: 700;
+    color: #da0037;
+    font-weight: 700;
 }
 
 .sidebar-heading {
-  font-size: .75rem;
+    font-size: 0.75rem;
 }
 
 /*
@@ -42,11 +42,11 @@
  */
 
 .navbar-brand {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.25);
 }
 
 .navbar .form-control {
-  padding: .75rem 1rem;
+    padding: 0.75rem 1rem;
 }
